tests/NormalTests/paczka1/fuzzy1/36743716.err
Error in line 8: 5Cnd5vf1 A538 70,7
Error in line 11: 5Cnd5vf1 S92 57,6
Error in line 22: o8mdOcL A538 96,6
Error in line 27: AX0UE A1L5 41,4
Error in line 18: A185 S92 94,1
Error in line 30: 5Cnd5vf1 A538 77,2
Error in line 23: AX0UE S92 9,5
